--- a/package.json
+++ b/package.json
@@ -20,16 +20,17 @@
     },
     "homepage": "https://github.com/jeff-hykin/beatle_runtime#readme",
     "dependencies": {
-        "express": "^4.17.1",
-        "nodemon": "^2.0.2",
-        "socket.io": "^2.3.0",
         "babel-runtime": "^6.26.0",
         "core-js": "^2.6.5",
         "css-baseline": "^1.1.10",
+        "express": "^4.17.1",
         "good-vue": "^1.3.1",
         "keen-ui": "^1.2.0",
         "mathjs": "^6.2.3",
+        "nodemon": "^2.0.2",
+        "phidget22": "^2.6.4",
         "serve": "^11.2.0",
+        "socket.io": "^2.3.0",
         "socket.io-client": "^2.3.0",
         "vue": "^2.6.10",
         "vue-router": "^3.0.3",
