--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "homepage": "https://github.com/jeff-hykin/beatle_runtime#readme",
     "dependencies": {
         "babel-runtime": "^6.26.0",
+        "body-parser": "^1.19.0",
         "core-js": "^2.6.5",
+        "cors": "^2.8.5",
         "css-baseline": "^1.1.10",
         "express": "^4.17.1",
         "good-vue": "^1.3.1",
