--- a/Beatle_Defense_Kinect/packages.config
+++ b/Beatle_Defense_Kinect/packages.config
@@ -3,5 +3,6 @@
   <package id="EmguCV" version="3.1.0.1" targetFramework="net461" />
   <package id="OpenTK" version="1.1.2225.0" targetFramework="net461" />
   <package id="OpenTK.GLControl" version="1.1.2225.0" targetFramework="net461" />
+  <package id="Phidget22.NET" version="1.6.20200417" targetFramework="net461" />
   <package id="ZedGraph" version="5.1.5" targetFramework="net461" />
 </packages>
