--- a/info.yaml
+++ b/info.yaml
@@ -1,5 +1,19 @@
 (using_atk_version): 1.1.0
 (project):
+    todo:
+        - add 2nd phigit board
+        - merge in face recognition code
+        - send people (number and who) data to the central server
+        - call exe from the app
+        - record video of intruder
+        - enable the servos
+        - have website remember logins
+        - website GUI for showing which people
+        - website GUI for browsing event logs
+        - add more details to the App homepage instructions
+        - create presentation
+        - make pre-recorded demos
+        - consider speaker sounds for countdown after keypad-arming
     (commands):
         gp: ruby scripts/gp.rb
         run: npx nodemon control_center/main.js
