--- a/Beatle_Defense_Kinect/packages.config
+++ b/Beatle_Defense_Kinect/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
+  <package id="Phidget22.NET" version="1.6.20200417" targetFramework="net461" />
   <package id="System.Runtime.Serialization.Json" version="4.3.0" targetFramework="net461" />
 </packages>
