--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "cors": "^2.8.5",
         "css-baseline": "^1.1.10",
         "express": "^4.17.1",
+        "good-date": "^1.3.16",
         "good-vue": "^1.3.1",
         "keen-ui": "^1.2.0",
         "mathjs": "^6.2.3",
