--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "homepage": "https://github.com/jeff-hykin/beatle_runtime#readme",
     "dependencies": {
+        "audic": "^1.0.2",
         "babel-runtime": "^6.26.0",
         "body-parser": "^1.19.0",
         "core-js": "^2.6.5",
@@ -32,9 +33,12 @@
         "mathjs": "^6.2.3",
         "nodemon": "^2.0.2",
         "phidget22": "^2.6.5",
+        "play-sound": "^1.1.3",
         "serve": "^11.2.0",
         "socket.io": "^2.3.0",
         "socket.io-client": "^2.3.0",
+        "sound-play": "^1.0.5",
+        "text2wav": "0.0.13",
         "vue": "^2.6.10",
         "vue-gallery": "^2.0.1",
         "vue-router": "^3.0.3",
