Moved facial recognition to separate file and refactored.

--- a/Beatle_Defense_Kinect/Beatle_Defense_Kinect.csproj
+++ b/Beatle_Defense_Kinect/Beatle_Defense_Kinect.csproj
@@ -129,6 +129,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="BitmapSourceConvert.cs" />
+    <Compile Include="FacialRecognition.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
