--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "homepage": "https://github.com/jeff-hykin/beatle_runtime#readme",
     "dependencies": {
+        "ajv": "^6.12.2",
         "audic": "^1.0.2",
         "babel-runtime": "^6.26.0",
         "body-parser": "^1.19.0",
@@ -28,6 +29,7 @@
         "cors": "^2.8.5",
         "css-baseline": "^1.1.10",
         "express": "^4.17.1",
+        "font-awesome": "^4.7.0",
         "good-date": "^1.3.16",
         "good-vue": "^1.3.1",
         "keen-ui": "^1.2.0",
@@ -41,8 +43,10 @@
         "sound-play": "^1.0.5",
         "text2wav": "0.0.13",
         "vue": "^2.6.10",
+        "vue-burger-menu": "^2.0.5",
         "vue-gallery": "^2.0.1",
         "vue-router": "^3.0.3",
+        "vue-sidebar-menu": "^4.5.3",
         "vue-simple-markdown": "^1.1.1",
         "vue-toasted": "^1.1.27"
     },
