--- a/info.yaml
+++ b/info.yaml
@@ -1,5 +1,17 @@
 (using_atk_version): 1.1.0
 (project):
+    - video:
+        - [do voice over]
+        - start up system, screen record windows
+        - screen record login on phone
+        - pause, talk about different options
+        - show arming with the app
+        - show face recognition
+        - show tracking
+    
+    - add specs to validation sheet
+    
+        
     done:
         - enable the servos for pan&tilt
         - Omar code
