--- a/info.yaml
+++ b/info.yaml
@@ -8,8 +8,11 @@
         - show arming with the app
         - show face recognition
         - show tracking
+        - show arming using keypad
+        - show gallery of
     
     - add specs to validation sheet
+    - add screenshots to presentation
     
         
     done:
